# oura_charts

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
.github/workflows/: build.yml  clean-workflow-runs.yml  clean_workflow_runs.yml  code-analysis.yml  delete-old-workflow-runs.yml  linux-clang-build.yml  linux-clang-codeql.yml  main-build.yml  windows-build.yml
app/: AboutDialog.cpp  AboutDialog.h  CMakeLists.txt  MainFrame.cpp  MainFrame.h  OuraCharts.wxui  OuraChartsApp.cpp  OuraChartsApp.h  PreferencesDialog.h
examples/: CMakeLists.txt  debug_test.cpp  fuck_restc_cpp.cpp  get_hr_data.cpp  get_profile.cpp  get_sleep_data.cpp  helpers.h
extras/clang-tidy/: UseClangTidy.cmake
extras/cppcheck/: Convert-ResultsFilePaths.ps1  UseCppCheck.cmake  catch2.cfg  cppcheck_suppressions.txt
include/oura_charts/: AggregateQuery.h  DailySleepScore.h  DailySleepScoreQuery.h  DailySleepScoreTraits.h  DataSeries.h  HeartRate.h  HeartRateMeasurement.h  HeartRateTraits.h  Logger.h  QueryField.h  QueryFilter.h  RestAuth.h  RestDataProvider.h  SchemaManager.h  SelectQuery.h  SleepDataSeries.h  SleepScoreAggregateQuery.h  SleepSession.h  TokenAuth.h  UserProfile.h  chrono_helpers.h  concepts.h  constants.h  datetime_helpers.h  exception.h  functors.h  helpers.h  oura_charts.h  oura_exception.h  rest_auth.h
include/oura_charts/detail/: aggregate_functors.h  concepts.h  datetime_helpers.h  functors.h  helpers.h  json_structs.h  logging.h  nullable_types.h  rest_constants.h  rest_helpers.h  utility.h
include/oura_charts/schema/: daily_sleep_score_schema.json  heart_rate_schema.h  heart_rate_schema.json
lib/: CMakeLists.txt  DailySleepScoreQuery.cpp  SchemaManager.cpp  logging.cpp
scripts/: Build-Preset.ps1  Download-CodeQL.ps1  Download-Vcpkg.ps1  Launch-DeveloperShell.ps1  Run-Build.ps1  Run-CodeCoverage.ps1  Run-Configure.ps1  build.sh  build_preset.sh  configure.sh  install_sarif_tools.sh  reset-cache.ps1  reset_cache.sh  run_clang_tidy_project_scan.sh  trim_repo_paths.sh
scripts/overlay_ports/glaze/: portfile.cmake  vcpkg.json
scripts/overlay_ports/wxwidgets/: portfile.cmake
scripts/overlay_triplets/: linux-clang-toolchain.cmake  x64-linux-wxwidgets.cmake  x64-linux-wxwindows.cmake  x64-windows-static-wxwindows.cmake  x64-wxwindows-dynamic.cmake
scripts/triplets/: x64-linux-wxwindows.cmake
scripts/vcpkg_ports/restc-cpp/: portfile.cmake
src/: .clang-tidy  AboutDialog.cpp  AboutDialog.h  AddDataFieldDialog.cpp  AddDataFieldDialog.h  BasicGLPane.cpp  BasicGLPane.h  CMakeLists.txt  ChartDocTemplate.cpp  ChartDocTemplate.h  ChartDocument.cpp  ChartDocument.h  ChartOptionsCanvas.cpp  ChartOptionsCanvas.h  ChartOptionsView.cpp  ChartOptionsView.h  ChartView.cpp  ChartView.h  DebugCallback.cpp  HeartRate.cpp  MainFrame.cpp  MainFrame.h  OuraCharts.wxui  OuraChartsApp.cpp  OuraChartsApp.h  PreferencesDialog.cpp  PreferencesDialog.h  RestAuth.cpp  UserProfile.cpp  adapters.h  bind_mappings.cpp  constants.h  doc_view_fwd.h  forward_declarations.h  helpers.cpp  logging.cpp  rest_helpers.cpp  utf8.manifest  utility.cpp  wx_generated_source.cmake
tests/: CMakeLists.txt  FileDataProvider.cpp  FileDataProvider.h  TestDataProvider.cpp  TestDataProvider.h  test_AggregateQuery.cpp  test_DailySleepScore.cpp  test_DataSeries.cpp  test_HeartRate.cpp  test_SelectQuery.cpp  test_SleepSession.cpp  test_UserProfile.cpp  test_bindings.cpp  test_chrono_helpers.cpp  test_datetime_helpers.cpp  test_functors.cpp  test_json_data.cpp  test_oura_exception.cpp  test_schema.cpp  tests_UserProfile.cpp
tests/test_data/: heartrate.json  personal_info.json  sleep.json
tools/clang-tidy/: UseClangTidy.cmake
tools/codeql/: config_default.yml  config_scan_all.yml
tools/cppcheck/: Convert-ResultsFilePaths.ps1  UseCppCheck.cmake  cppcheck_suppressions.txt
